--- a/DemoEKZA/WindowFolder/EventInfoWindow.xaml
+++ b/DemoEKZA/WindowFolder/EventInfoWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DemoEKZA.WindowFolder"
         mc:Ignorable="d"
-        Title="EventInfoWindow" Height="450" Width="800">
+        Title="EventInfoWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid Background="#99FFFF">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
@@ -17,16 +17,16 @@
                 <Image/>
             </Border>
             <Label Content="Дата" FontFamily="Comic Sans MS"/>
-            <DatePicker x:Name="DatePick" FontFamily="Comic Sans MS"/>
+            <DatePicker x:Name="DatePick" SelectedDate="{Binding EventDateTime}" FontFamily="Comic Sans MS"/>
             <Label Content="Город" FontFamily="Comic Sans MS"/>
-            <ComboBox Name="GorodCB" FontFamily="Comic Sans MS"/>
+            <TextBlock Name="GorodCB" Text="{Binding City.CityName}" FontFamily="Comic Sans MS"/>
             <Label Content="Организатор" FontFamily="Comic Sans MS"/>
-            <ComboBox x:Name="Organizator" FontFamily="Comic Sans MS"/>
+            <TextBlock x:Name="Organizator" Text="{Binding User.FIO}" FontFamily="Comic Sans MS"/>
         </StackPanel>
 
         <ScrollViewer Grid.Column="1" Margin="10">
-            <TextBlock x:Name="OpisanieTB" TextWrapping="Wrap" FontFamily="Comic Sans MS" Foreground="#0000CC">
-                Описание Описание Описание Описание Описание Описание Описание Описание
+            <TextBlock x:Name="OpisanieTB" TextWrapping="Wrap" FontFamily="Comic Sans MS" Foreground="#0000CC" Text="{Binding Description}">
+                
             </TextBlock>
         </ScrollViewer>
     </Grid>
