--- a/DemoEKZA/WindowFolder/EventInfoWindow.xaml
+++ b/DemoEKZA/WindowFolder/EventInfoWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DemoEKZA.WindowFolder"
         mc:Ignorable="d"
-        Title="EventInfoWindow" Height="450" Width="800">
+        Title="EventInfoWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid Background="#99FFFF">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
@@ -26,7 +26,7 @@
 
         <ScrollViewer Grid.Column="1" Margin="10">
             <TextBlock x:Name="OpisanieTB" TextWrapping="Wrap" FontFamily="Comic Sans MS" Foreground="#0000CC">
-                Описание Описание Описание Описание Описание Описание Описание Описание
+                
             </TextBlock>
         </ScrollViewer>
     </Grid>
